--- a/CheerPrintWorker/CheerPrintWorker.csproj
+++ b/CheerPrintWorker/CheerPrintWorker.csproj
@@ -119,6 +119,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="cheerprint.xml" />
     <Content Include="Firefox\AccessibleHandler.dll" />
     <Content Include="Firefox\AccessibleMarshal.dll" />
     <Content Include="Firefox\d3dcompiler_47.dll" />
